--- a/岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件.md
+++ b/岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件.md
@@ -1,1 +1,63 @@
-zuij
+最近秦相爷遭遇了一些风波，从“南归南、北归北事件”到“赵鼎罢相事件”再到这次的“岳飞风波亭事件”。很多朋友留言问，怎么看待这次的岳飞风波亭事件？
+
+很简单，这是非常典型的黑公关活动，不是什么擅杀大臣的问题。
+
+而且是一次全临安、全官场发起的黑公关活动，大部分的临安小市民、临安的官员，全部参与进来了。
+
+我们都知道，朝廷的官员要宣传一次政绩和做一次危机公关，成本都是千万之巨。比如靖康年间，二圣为了宣传自己的文韬武略，邀请的是大金这样的军事强国为他们北狩护航保驾，可见难度之大。
+
+而做黑公关的成本，是正面公关的很多倍。
+
+岳飞这样的普通将军，显然没有这么大的能量来做这种操作，他只是一个可怜的棋子，被人利用了。
+
+谁能有这么多的钱，并且还有动机来黑秦相爷呢？背后的推动力量，一把手都能数过来。因为通过分析，损害秦相爷，谁能受益就知道了。
+
+女真是第一黑手。
+
+秦相爷是主管宋金和议的，宋金达成和平，最害怕的是女真主战派。所以，幕后的第一推手，肯定是女真潜伏在临安的细作。
+
+大家注意了，女真正在完颜宗翰的事情上焦头烂额，迫切需要转移国内矛盾、制造大宋内部的矛盾借以削弱大宋实力降低大宋的威胁。
+
+很明显，这都是女真的惯用手法，在徽宗年间我们跟契丹作战的时候，他们经常使用的。
+
+政敌是第二黑手。
+
+除了女真人，还有一批人是见不得秦相爷好的，这就是秦相爷的竞争对手。
+
+这背后的道理很简单，自从秦相爷掌管外交以来，宋金和平指日可待，高太尉在军队和民间的威望与日俱增。
+
+这让其他的官员们压力非常大，我就不点韩世忠、刘锜等人的名字了。
+
+大家想想，岳飞坐观胜负、指斥乘舆，这么明目张胆的违规行为，大理寺丞还能轻判，这说明了什么？
+
+说书人是第三黑手。
+
+像超级黑公关这种单子，说书人是收益巨大的参与方。他们游走于开封乃至周边城市的街头巷尾、茶室酒楼，毫无公正性可言。很多人可能以为，这些说书人的收益主要来自于听众的打赏，其实不是这样，知名的说书人大多数都是被背后的金主养着的。
+
+收钱办事，金主要他们黑谁他们就在公共场合说谁的不是，赚的钱比打赏多多了。
+
+为什么对说书人的印象这么深刻呢？因为秦相爷是大金细作的谎言，就是他们传播出来的。
+
+岳飞这个事情，闹到现在这个样子，到底应该怎么解决呢？其实事情非常好解决。
+
+第一，该宋刑统管的，交给法律管就行了。哪个领导没有被手下非议过，如果出现手下非议就上纲上线，那么一夜之间所有的领导都要下台，大宋的社会就停止运转了。所以说，就事论事，才是解决问题的正确方法和方向。
+
+第二，杜绝金主包养说书人，像这些搞黑公关业务的金主和说书人，该封禁的封禁，该处罚的就要从重处罚。
+
+第三，宋金之间的较量，是一个长期而艰苦的过程，在这个过程中，为了宋金的和平，秦相爷是冲在第一线的。女真没能打垮秦相爷，秦相爷反而被我们内部人打垮了，这是非常恶劣的事情。如果因此大宋被女真打垮了，大家都变成女真的奴隶，那就为时已晚了。
+
+现在我们回过头来看看，岳飞这件事情，秦相爷真的错了吗？
+
+首先，岳飞二十从军，又在军队工作了那么多年的将军，连“武将不能干预天子家事”这样的规定都不遵守，秦相爷不应该治他吗？
+
+其次，岳飞一个万寿观使，嘴上说尽忠报国，还说什么“文不爱财，武不畏死”，却能毫不费力地让军队吃饱喝足，甚至打出“冻死不拆屋，饿死不掳掠”的旗号，这背后折射出什么问题，大家难道不仔细想想吗？
+
+再次，岳飞这起案件出来以后，大理寺丞帮他开脱，御史中丞帮他周全，这背后都离不开他死党韩世忠的四处游说。如果他真的没错，怎么可能游说呢？走正常渠道就可以了啊。
+
+最后，岳飞有一个手下，叫黄佐。大家可能不知道，这人是一个跟随杨么作乱的叛贼，能招降这种叛贼的人，会是什么好鸟？
+
+相信大家也看明白了，岳飞这样人，不遵守皇上圣旨、动不动上庐山、破坏宋金和平、涉嫌结党营私，还勾结叛贼，秦相爷能够及时把岳飞这个宋军里的垃圾清除出去，可以说是大宋的一大幸事。
+
+为了这件事情批评和诬陷秦相爷的人，是出于什么目的，大家应该一目了然了吧。
+
+亲痛仇快的事情，我劝大家少做。
