--- a/岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件.md
+++ b/岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件.md
@@ -1,3 +1,5 @@
+岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件
+
 最近秦相爷遭遇了一些风波，从“南归南、北归北事件”到“赵鼎罢相事件”再到这次的“岳飞风波亭事件”。很多朋友留言问，怎么看待这次的岳飞风波亭事件？
 
 很简单，这是非常典型的黑公关活动，不是什么擅杀大臣的问题。
