--- a/不列颠起义事件：一次针对尼禄皇帝的黑公关狂欢.md
+++ b/不列颠起义事件：一次针对尼禄皇帝的黑公关狂欢.md
@@ -1,34 +1,65 @@
 https://zhuanlan.zhihu.com/p/95845114
 
 最近尼禄陛下遭遇了一些风波，从“杀妈事件”到“皮索阴谋事件”再到这次的“不列颠造反事件”。很多元老留言问，怎么看待这次的不列颠造反事件？
+
 很简单，这是非常典型的黑公关活动，不是什么加税办尼禄节的问题。
+
 而且是一次全意大利、全地中海沿岸发起的黑公关活动，大部分的意大利人、犹太人、亚洲人，全部参与进来了。
+
 我们都知道，元老院的执政官要宣传一次政绩和做一次危机公关，成本都是千万之巨。比如三头同盟年间，克拉苏为了宣传自己的功绩，邀请的是苏雷纳斯这样的王公为他的脑袋里灌金子，可见难度之大。
+
 而做黑公关的成本，是正面公关的很多倍。
+
 布狄卡这样的普通蛮族酋长，显然没有这么大的能量来做这种操作，她只是一个可怜的棋子，被元老院及其背后的上层贵族同盟利用了。
+
 谁能有这么多的钱，并且还有动机来黑陛下呢？背后的推动力量，一把手都能数过来。因为通过分析，损害陛下，谁能受益就知道了。
+
 帕提亚是第一黑手。
+
 尼禄陛下是罗马的领袖，罗马的强大，最害怕的是帕提亚人，而且帕提亚人和亚美尼亚人信仰一致。所以，幕后的第一推手，肯定是小亚细亚潜伏在罗马的密特拉信徒。
+
 大家注意了，梯里达底一世正在朗代亚惨败的事情上焦头烂额，迫切需要转移国内矛盾、制造罗马内部的矛盾借以削弱德意志实力降低德意志的威胁。
+
 很明显，这都是帕提亚的惯用手法，在神君恺撒执政前我们把鹰旗插在他们领土上的时候，我们经常使用的。
+
 希腊人是第二黑手。
+
 除了帕提亚人，还有一批人是见不得罗马好的，这就是希腊。
+
 这背后的道理很简单，自从尼禄陛下举行艺术巡演以来，罗马文化实力突飞猛涨，陛下在艺术节和民间的威望与日俱增。
+
 这让其他的文艺创作者压力非常大，我就不点荷马、萨福等人的名字了。
+
 大家想想，布狄卡敲烂罗马胜利之神的雕像，这么明目张胆的辱希腊行为，厄琉息斯祭司还不开始和德鲁伊们斗法，这说明了什么？
+
 讽刺诗作家及其背后的基督徒金主是第三黑手。
+
 像超级黑公关这种单子，讽刺诗作家是收益巨大的参与方。他们游走于罗马乃至全欧洲大城市的街头巷尾、澡堂竞技场，毫无公正性可言。很多人可能以为，这些讽刺诗作家的收益主要来自于读者的买书，其实不是这样，知名的讽刺诗作家大多数都是被背后的基督徒金主养着的。
+
 收钱办事，基督徒金主要他们黑谁，他们就在公共场合说谁的不是，赚的钱比卖书多多了。
+
 为什么对讽刺诗作家的印象这么深刻呢？因为陛下杀了自己两个老婆的谎言，就是他们传播出来的。
+
 陛下这个事情，闹到现在这个样子，到底应该怎么解决呢？其实事情非常好解决。
+
 第一，该十二铜表法管的，交给铜表法管就行了。哪个领导没有被没公民权的外地人非议过，如果出现外地人非议就上纲上线，那么一夜之间所有的领导都要下台，罗马的社会就停止运转了。所以说，就事论事，才是解决问题的正确方法和方向。
+
 第二，杜绝基督徒金主包养讽刺诗诗人，像这些搞黑公关业务的基督徒金主和讽刺诗作家，该喂狮子的喂狮子，该钉十字架的就要加大力度钉十字架。
+
 第三，罗马和帕提亚之间的较量，是一个长期而艰苦的过程，在这个过程中，陛下是冲在第一线的。帕提亚没能打垮陛下，陛下反而被我们内部人打垮了，这是非常恶劣的事情。如果因此罗马被帕提亚打垮了，大家都变成帕提亚的大维奇，那就为时已晚了。
+
 现在我们回过头来看看，不列颠起义这件事情，陛下真的错了吗？
+
 首先，布狄卡是部落首领，又给行省总督交税那么多年，连“总督和包税人对地方财政有最高解释”这样的规定都不遵守，陛下不应该治她吗？
+
 其次，布狄卡一个普通蛮族，恰逢老公去世拿着并不高的抚恤金，却能毫不费力地拿出钱给战士买蓝色涂料，这背后折射出什么问题，大家难道不仔细想想吗？
-再次，不列颠起义这起案件出来以后，苏维托尼乌斯帮布狄卡开脱，朗蒂姆尼亚人帮她周全，这背后都离不开阿尔米尼乌斯的四处显灵。如果她真的没错，怎么可能显灵呢？走正常渠道就可以了啊。
+
+再次，不列颠起义这起案件出来以后，苏维托尼乌斯帮布狄卡开脱，朗蒂姆尼亚人帮她周全，这背后都离不开阿尔米尼乌斯的四处显灵。如果她真的没错，怎么可能显灵呢？走正常渠道就可以了啊
+。
 最后，布狄卡有一个好朋友，在康沃尔，叫阿尔托利斯。大家可能不知道，这人是一个打进罗马给自己加冕的蛮族军头，能跟这种人交朋友的人，会是什么好鸟？
+
 相信大家也看明白了，布狄卡这样人，不遵守罗马法律、存在异教思想、涉嫌招魂，还颠覆陛下政权的ZZ犯，陛下能够及时把布狄卡这元老院行省的垃圾清除出去，可以说是罗马的一大幸事。
+
 为了这件事情批评和诬陷陛下的人，是出于什么目的，大家应该一目了然了吧。
+
 亲痛仇快的事情，我劝大家少做。
