--- a/岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件.md
+++ b/岳飞风波亭事件——一场针对秦相爷的黑公关狂欢事件.md
@@ -28,7 +28,7 @@
 
 除了女真人，还有一批人是见不得秦相爷好的，这就是秦相爷的竞争对手。
 
-这背后的道理很简单，自从秦相爷掌管外交以来，宋金和平指日可待，高太尉在军队和民间的威望与日俱增。
+这背后的道理很简单，自从秦相爷掌管外交以来，宋金和平指日可待，秦相爷在军队和民间的威望与日俱增。
 
 这让其他的官员们压力非常大，我就不点韩世忠、刘锜等人的名字了。
 
@@ -58,7 +58,7 @@
 
 再次，岳飞这起案件出来以后，大理寺丞帮他开脱，御史中丞帮他周全，这背后都离不开他死党韩世忠的四处游说。如果他真的没错，怎么可能游说呢？走正常渠道就可以了啊。
 
-最后，岳飞有一个手下，叫黄佐。大家可能不知道，这人是一个跟随杨么作乱的叛贼，能招降这种叛贼的人，会是什么好鸟？
+最后，岳飞有一个手下，叫黄佐。大家可能不知道，这人是一个曾经跟随杨么作乱的叛贼，能招降这种叛贼的人，会是什么好鸟？
 
 相信大家也看明白了，岳飞这样人，不遵守皇上圣旨、动不动上庐山、破坏宋金和平、涉嫌结党营私，还勾结叛贼，秦相爷能够及时把岳飞这个宋军里的垃圾清除出去，可以说是大宋的一大幸事。
 
